--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "1492",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server/server.js"
+    "build": "echo 'Build completed'",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Juego multijugador de barcos piratas",
   "dependencies": {
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "express": "^4.18.2"
   },
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
